# llm_learn

./: AGENTS.md  AI_Infra工程师学习路线.md  AI求职6个月规划-v2终版.md  CLAUDE.md  GPU训练平台技术架构介绍-面试问答档案.docx  README.md  _patch_notes.py  冯玉湄-AIInfra简历-深度聚焦版.docx  求职规划-6个月能力提升方案.md
projects/skin_care_agent/backend/: .env.example  README.md  alembic.ini  dev_notes.md  pyproject.toml
projects/skin_care_agent/backend/app/: config.py  main.py  readme.md
projects/skin_care_agent/backend/app/api/: ai_debug.py  analyses.py  auth.py  chat.py  check_ins.py  deps.py  files.py  health.py  lineages.py  me.py  photos.py  trends.py
projects/skin_care_agent/backend/app/db/: session.py
projects/skin_care_agent/backend/app/models/: __init__.py  ai_call_log.py  ai_usage.py  analysis.py  auth.py  base.py  chat_message.py  check_in.py  patch_lineage.py  photo.py  user.py
projects/skin_care_agent/backend/app/schemas/: analysis.py  auth.py  chat.py  check_in.py  lineage.py  photo.py  trend.py
projects/skin_care_agent/backend/app/services/: __init__.py  analysis_service.py  auth_service.py  chat_service.py  check_in_aggregation.py  consent_service.py  (+1 more)
projects/skin_care_agent/backend/quick_start/: start_bash.sh
projects/skin_care_agent/backend/scripts/: download_face_landmarker.ps1
projects/skin_care_agent/backend/skin_care_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/skin_care_agent/backend/tests/: test_app.py  test_auth.py  test_check_in_aggregation.py  test_check_ins.py  test_normalization.py  test_photos.py  test_quality.py  test_tracker.py  test_trends.py
(+166 files in other folders)
