[project]
name = "skin-care-agent-backend"
version = "0.1.0"
description = "AI skin management backend (MVP)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "tenacity>=9.0",
    "scipy>=1.13",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "mediapipe>=0.10",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
